# Copyright 2023 The Toucan Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../toucan_executable.gni")

group("samples") {
  deps = [
    ":springy",
    ":shiny",
  ]
}

toucan_executable("skybox") {
  sources = [ "skybox.t" ]
}

toucan_executable("springy") {
  sources = [ "springy.t" ]
}

toucan_executable("springy-3d") {
  sources = [ "springy-3d.t" ]
}

toucan_executable("springy-compute") {
  sources = [ "springy-compute.t" ]
}

toucan_executable("springy-compute-3d") {
  sources = [ "springy-compute-3d.t" ]
}

toucan_executable("shiny") {
  sources = [ "shiny.t" ]
}

source_set("main") {
  sources = [ "main.cc" ]
  include_dirs = [ ".." ]
}
