# Copyright 2023 The Toucan Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../toucan_executable.gni")

group("samples") {
  deps = [
    ":springy",
    ":shiny",
  ]
}

toucan_app("decode") {
  sources = [ "decode.t" ]
}

toucan_app("disco-dragon") {
  sources = [ "disco-dragon.t" ]
}

toucan_app("skybox") {
  sources = [ "skybox.t" ]
}

toucan_app("springy") {
  sources = [ "springy.t" ]
}

toucan_app("springy-3d") {
  sources = [ "springy-3d.t" ]
}

toucan_app("springy-compute") {
  sources = [ "springy-compute.t" ]
}

toucan_app("springy-compute-3d") {
  sources = [ "springy-compute-3d.t" ]
}

toucan_app("shiny") {
  sources = [ "shiny.t" ]
}

toucan_app("shiny-anim") {
  sources = [ "shiny-anim.t" ]
}

toucan_app("shiny-compute-anim") {
  sources = [ "shiny-compute-anim.t" ]
}

toucan_app("shiny-dragon") {
  sources = [ "shiny-dragon.t" ]
}

toucan_app("triangle") {
  sources = [ "triangle.t" ]
}

toucan_app("gouraud") {
  sources = [ "gouraud.t" ]
}

toucan_app("window") {
  sources = [ "window.t" ]
}

source_set("main") {
  sources = [ "main.cc" ]
  include_dirs = [ ".." ]
}

if (is_android) {
  source_set("android_main") {
    sources = [ "android_main.cc", "$android_ndk_dir/sources/android/native_app_glue/android_native_app_glue.c" ]
    include_dirs = [ "..", "$android_ndk_dir/sources/android/native_app_glue" ]
  }
}
